--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,14 @@
   </head>
 
   <body>
+  <nav>
+  <% if user_signed_in? %>
+  <%= link_to "logout", destroy_user_session_path, method: :delete %>
+  <% else %>
+  <%= link_to "login", new_user_session_path %> |
+  <%= link_to "sign up", new_user_registration_path %>
+  <% end %>
+  </nav>
     <%= yield %>
   </body>
 </html>
