--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <body>
   <nav>
   <% if user_signed_in? %>
-  <%= link_to "logout", destroy_user_session_path, method: :delete %>
+  <%= link_to "logout", destroy_user_session_path, data: { turbo_method: :delete } %>
   <% else %>
   <%= link_to "login", new_user_session_path %> |
   <%= link_to "sign up", new_user_registration_path %>
