--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -22,15 +23,13 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-  <nav>
-  <% if user_signed_in? %>
-  <%= link_to "logout", destroy_user_session_path, data: { turbo_method: :delete } %>
-  <% else %>
-  <%= link_to "login", new_user_session_path %> |
-  <%= link_to "sign up", new_user_registration_path %>
-  <% end %>
-  </nav>
-    <%= yield %>
+  <body class="d-flex flex-column min-vh-100">
+    <%= render "shared/header" %>
+
+    <main class="container my-4 flex-fill">
+        <%= yield %>
+    </main>
+
+    <%= render "shared/footer" %>
   </body>
 </html>
