--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,14 +51,34 @@ body {
 }
 
 .home-card {
-  margin-bottom: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: antiquewhite;
 }
 
 .home-card:hover {
   transform: translateY(-5px);
   transition: transform 0.3s;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.form-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: antiquewhite;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-card {
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-wrapper {
+  margin-top: 50px;
 }
 
 @media (max-width: 770px) {
