--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,13 @@
       <li class="nav-item">
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
+
       <% if user_signed_in? %>
+        <!-- ✅ New: Link to Classrooms -->
+        <li class="nav-item">
+          <%= link_to "My Classrooms", classrooms_path, class: "nav-link" %>
+        </li>
+
         <li class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
         </li>
