--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,11 +1,15 @@
-<% content_for :title, "New assignment" %>
-
-<h1>New assignment</h1>
-
-<%= render "form", assignment: @assignment %>
-
-<br>
-
-<div>
-  <%= link_to "Back to assignments", assignments_path %>
+<div class="form-wrapper">
+  <div class="form-container">
+    <div class="form-card">
+      <% content_for :title, "New Assignment" %>
+      
+      <h1 class="page-title mb-4">Add New Assignment</h1>
+      
+      <%= render "form", assignment: @assignment %>
+      
+      <div class="mt-3">
+        <%= link_to "← Back to classroom", classroom_path(@assignment.classroom), class: "btn btn-secondary" %>
+      </div>
+    </div>
+  </div>
 </div>
