--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,27 +1,28 @@
-<%= form_with(model: classroom) do |form| %>
-  <% if classroom.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(classroom.errors.count, "error") %> prohibited this classroom from being saved:</h2>
-
-      <ul>
-        <% classroom.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+<div class="form-wrapper">
+  <div class="form-container">
+    <div class="form-card">
+      <%= form_with(model: classroom, local: true) do |form| %>
+        <% if classroom.errors.any? %>
+          <div class="alert alert-danger">
+            <h6><%= pluralize(classroom.errors.count, "error") %> prohibited this classroom from being saved:</h6>
+            <ul>
+              <% classroom.errors.each do |error| %>
+                <li><%= error.full_message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
+
+        <div class="mb-3">
+          <%= form.label :name, "Classroom Name", class: "form-label" %>
+          <%= form.text_field :name, class: "form-control", placeholder: "e.g., Math 101, History, Biology Lab" %>
+        </div>
+
+        <div class="d-flex gap-2">
+          <%= form.submit class: "btn btn-primary" %>
+          <%= link_to "Cancel", classrooms_path, class: "btn btn-secondary" %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
   </div>
-
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
