--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,10 +1,16 @@
-<p style="color: green"><%= notice %></p>
+<div class="form-wrapper">
+  <div class="form-container">
+    <div class="form-card">
+      <p style="color: green"><%= notice %></p>
 
-<%= render @assignment %>
+      <%= render @assignment %>
 
-<div>
-  <%= link_to "Edit this assignment", edit_assignment_path(@assignment) %> |
-  <%= link_to "Back to assignments", assignments_path %>
+      <div>
+        <%= link_to "Edit this assignment", edit_assignment_path(@assignment) %> |
+        <%= link_to "Back to assignments", assignments_path %>
 
-  <%= button_to "Destroy this assignment", @assignment, method: :delete %>
+        <%= button_to "Delete this assignment", @assignment, method: :delete %>
+      </div>
+    </div>
+  </div>
 </div>
