--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,6 +16,10 @@
         </li>
 
         <li class="nav-item">
+          <%= link_to "My Assignments", assignments_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
         </li>
       <% else %>
