--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -5,7 +5,7 @@
 
       <% content_for :title, "My Classrooms" %>
 
-      <h1 class="page-title mb-4">My Classrooms</h1>
+      <h1 class="page-title mb-4">📚 My Classrooms</h1>
 
       <div class="row">
         <% @classrooms.each do |classroom| %>
@@ -33,7 +33,7 @@
       <% end %>
 
       <div class="text-center mt-4">
-        <%= link_to "Add New Classroom", new_classroom_path, class: "btn btn-success btn-lg" %>
+        <%= link_to "📚 Add New Classroom", new_classroom_path, class: "btn btn-success btn-lg" %>
       </div>
     </div>
   </div>
