--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -33,7 +33,7 @@
       <% end %>
 
       <div class="text-center mt-4">
-        <%= link_to "📚 Add New Classroom", new_classroom_path, class: "btn btn-success btn-lg" %>
+        <%= link_to "Add New Classroom", new_classroom_path, class: "btn btn-success btn-lg" %>
       </div>
     </div>
   </div>
